--- a/categories.html
+++ b/categories.html
@@ -32,27 +32,190 @@
       background: #f5f7fa;
       color: #003366;
     }
+    /* Header styles */
+    .site-header .navbar-brand img {
+      vertical-align: middle;
+    }
+    .site-header .navbar-main .navbar-nav .nav-link {
+      font-weight: bold;
+      letter-spacing: 0.5px;
+    }
+    @media (max-width: 991.98px) {
+      .site-header .navbar-main .navbar-nav {
+        width: 100%;
+      }
+      .site-header .navbar-main .navbar-nav .nav-item {
+        width: 100%;
+      }
+      .site-header .navbar-main .navbar-nav .nav-link,
+      .site-header .navbar-main .navbar-nav .btn {
+        width: 100%;
+        text-align: left;
+        margin-left: 0;
+      }
+    }
   </style>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
 </head>
 <body>
-  <!-- Header included at the top -->
-  <div id="include-header"></div>
+  <!-- Header START -->
+  <header class="site-header">
+    <!-- Top yellow bar -->
+    <div class="bg-warning py-2">
+      <div class="container-fluid d-flex justify-content-between align-items-center px-3">
+        <!-- Left: Home, Railway Official Website -->
+        <div class="d-flex align-items-center">
+          <a href="index.html" class="text-dark fw-bold me-3"><i class="fas fa-home"></i> Home</a>
+          <a href="https://indianrail.gov.in" target="_blank" class="text-dark fw-bold">Railway Official Website</a>
+        </div>
+        <!-- Right: About Us, Register, Login, Logout -->
+        <div class="d-flex align-items-center">
+          <a href="about.html" class="text-dark fw-bold me-3 d-none d-lg-inline">About Us</a>
+          <a href="register.html" id="registerLink" class="text-dark fw-bold me-3 d-none d-lg-inline">Register</a>
+          <a href="login.html" id="loginLink" class="text-dark fw-bold me-3 d-none d-lg-inline">Login</a>
+          <button id="logoutButton" class="btn btn-outline-dark btn-sm fw-bold d-none d-lg-inline" style="display:none;">Logout</button>
+        </div>
+        <!-- Hamburger for mobile -->
+        <button class="navbar-toggler d-lg-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+    </div>
+
+    <!-- White navbar under yellow bar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-white navbar-main border-bottom">
+      <div class="container-fluid px-3">
+        <!-- Left: Logo + IR-LDCE -->
+        <a class="navbar-brand d-flex align-items-center me-auto" href="index.html">
+          <img src="logo.png" alt="IR-LDCE Logo" style="height:48px;max-width:120px;width:auto;object-fit:contain;" />
+          <span class="ms-2 fw-bold">IR-LDCE</span>
+        </a>
+        <!-- Right: Categories, Daily Dose, Dashboard -->
+        <div class="collapse navbar-collapse justify-content-end" id="mainNavbar">
+          <ul class="navbar-nav mb-2 mb-lg-0 align-items-center">
+            <li class="nav-item">
+              <a class="nav-link fw-bold" href="categories.html">CATEGORIES</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link fw-bold" href="daily-dose.html">DAILY DOSE</a>
+            </li>
+            <li class="nav-item">
+              <button id="dashboardBtn" type="button" class="btn btn-outline-dark btn-sm ms-lg-2 fw-bold" style="display:none;">
+                <i class="fa fa-user-circle"></i> Dashboard
+              </button>
+            </li>
+            <!-- Mobile only: About Us, Register, Login, Logout -->
+            <li class="nav-item d-lg-none mt-2">
+              <a href="about.html" class="nav-link fw-bold">About Us</a>
+            </li>
+            <li class="nav-item d-lg-none">
+              <a href="register.html" id="registerLinkMobile" class="nav-link fw-bold">Register</a>
+            </li>
+            <li class="nav-item d-lg-none">
+              <a href="login.html" id="loginLinkMobile" class="nav-link fw-bold">Login</a>
+            </li>
+            <li class="nav-item d-lg-none">
+              <button id="logoutButtonMobile" class="btn btn-outline-dark btn-sm fw-bold w-100 mt-1" style="display:none;">Logout</button>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <!-- Header END -->
+
+  <!-- Firebase Auth logic for header -->
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+    import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyCRhKq7k4v2MdiE5xT4H7-Yb7SLQ5mvTn8",
+      authDomain: "quiz-app-1b48b.firebaseapp.com",
+      projectId: "quiz-app-1b48b",
+      storageBucket: "quiz-app-1b48b.appspot.com",
+      messagingSenderId: "765334603137",
+      appId: "1:765334603137:web:1c8a13f6086a6773c2d480"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+
+    function updateHeaderUI(user) {
+      // Desktop
+      const registerLink = document.getElementById('registerLink');
+      const loginLink = document.getElementById('loginLink');
+      const logoutButton = document.getElementById('logoutButton');
+      // Mobile
+      const registerLinkMobile = document.getElementById('registerLinkMobile');
+      const loginLinkMobile = document.getElementById('loginLinkMobile');
+      const logoutButtonMobile = document.getElementById('logoutButtonMobile');
+      // Dashboard button
+      const dashboardBtn = document.getElementById('dashboardBtn');
+
+      if (user) {
+        if (registerLink) registerLink.style.display = 'none';
+        if (loginLink) loginLink.style.display = 'none';
+        if (logoutButton) logoutButton.style.display = '';
+        if (registerLinkMobile) registerLinkMobile.style.display = 'none';
+        if (loginLinkMobile) loginLinkMobile.style.display = 'none';
+        if (logoutButtonMobile) logoutButtonMobile.style.display = '';
+        if (dashboardBtn) dashboardBtn.style.display = '';
+      } else {
+        if (registerLink) registerLink.style.display = '';
+        if (loginLink) loginLink.style.display = '';
+        if (logoutButton) logoutButton.style.display = 'none';
+        if (registerLinkMobile) registerLinkMobile.style.display = '';
+        if (loginLinkMobile) loginLinkMobile.style.display = '';
+        if (logoutButtonMobile) logoutButtonMobile.style.display = 'none';
+        if (dashboardBtn) dashboardBtn.style.display = 'none';
+      }
+    }
+
+    document.addEventListener('DOMContentLoaded', function() {
+      // Monitor Firebase Auth state
+      onAuthStateChanged(auth, function(user) {
+        updateHeaderUI(user);
+      });
+
+      // Dashboard button
+      const dashboardBtn = document.getElementById('dashboardBtn');
+      if (dashboardBtn) {
+        dashboardBtn.addEventListener('click', function() {
+          window.location.href = 'dashboard.html';
+        });
+      }
+
+      // Logout buttons
+      const logoutButton = document.getElementById('logoutButton');
+      if (logoutButton) {
+        logoutButton.addEventListener('click', function() {
+          signOut(auth).then(function() {
+            window.location.href = 'index.html';
+          });
+        });
+      }
+      const logoutButtonMobile = document.getElementById('logoutButtonMobile');
+      if (logoutButtonMobile) {
+        logoutButtonMobile.addEventListener('click', function() {
+          signOut(auth).then(function() {
+            window.location.href = 'index.html';
+          });
+        });
+      }
+      // Login/Register links: let them go to their respective pages
+    });
+  </script>
+
   <div class="categories-main">
     <a href="manual-quizzes.html" class="category-card">Manual Based Quiz</a>
     <a href="pyq-quizzes.html" class="category-card">PYQ Based Quiz</a>
   </div>
-  <script type="module">
-    // Inject header.html (same as on other pages)
-    (async function includeHeader() {
-      try {
-        const resp = await fetch('header.html');
-        if (!resp.ok) throw new Error('Header not found');
-        document.getElementById('include-header').innerHTML = await resp.text();
-      } catch (e) {
-        document.getElementById('include-header').innerHTML =
-          '<div class="error" style="background:#ffe0e0;color:#b00;padding:1em;">Header failed to load.</div>';
-      }
-    })();
-  </script>
+
+  <!-- Bootstrap JS Bundle -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
