--- a/index.html
+++ b/index.html
@@ -4,110 +4,67 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>IR-LDCE Quiz</title>
-
-  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-
-  <!-- Font Awesome -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
-
-  <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css" />
+  <style>
+    .site-header .navbar-brand img { vertical-align: middle; }
+    .site-header .navbar-main .navbar-nav .nav-link { font-weight: bold; letter-spacing: 0.5px; }
+    @media (max-width: 991.98px) {
+      .site-header .navbar-main .navbar-nav { width: 100%; }
+      .site-header .navbar-main .navbar-nav .nav-item { width: 100%; }
+      .site-header .navbar-main .navbar-nav .nav-link,
+      .site-header .navbar-main .navbar-nav .btn { width: 100%; text-align: left; margin-left: 0; }
+    }
+  </style>
 </head>
 <body>
-
-  <!-- Header START -->
+  <!-- HEADER START -->
   <header class="site-header">
-    <!-- Top yellow bar -->
     <div class="bg-warning py-2">
       <div class="container-fluid d-flex justify-content-between align-items-center px-3">
-        <!-- Left: Home, Railway Official Website -->
         <div class="d-flex align-items-center">
           <a href="index.html" class="text-dark fw-bold me-3"><i class="fas fa-home"></i> Home</a>
           <a href="https://indianrail.gov.in" target="_blank" class="text-dark fw-bold">Railway Official Website</a>
         </div>
-        <!-- Right: About Us, Register, Login, Logout -->
         <div class="d-flex align-items-center">
           <a href="about.html" class="text-dark fw-bold me-3 d-none d-lg-inline">About Us</a>
           <a href="register.html" id="registerLink" class="text-dark fw-bold me-3 d-none d-lg-inline">Register</a>
           <a href="login.html" id="loginLink" class="text-dark fw-bold me-3 d-none d-lg-inline">Login</a>
           <button id="logoutButton" class="btn btn-outline-dark btn-sm fw-bold d-none d-lg-inline" style="display:none;">Logout</button>
         </div>
-        <!-- Hamburger for mobile -->
         <button class="navbar-toggler d-lg-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
       </div>
     </div>
-
-    <!-- White navbar under yellow bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white navbar-main border-bottom">
       <div class="container-fluid px-3">
-        <!-- Left: Logo + IR-LDCE -->
         <a class="navbar-brand d-flex align-items-center me-auto" href="index.html">
           <img src="logo.png" alt="IR-LDCE Logo" style="height:48px;max-width:120px;width:auto;object-fit:contain;" />
           <span class="ms-2 fw-bold">IR-LDCE</span>
         </a>
-        <!-- Right: Categories, Daily Dose, Dashboard -->
         <div class="collapse navbar-collapse justify-content-end" id="mainNavbar">
           <ul class="navbar-nav mb-2 mb-lg-0 align-items-center">
-            <li class="nav-item">
-              <a class="nav-link fw-bold" href="categories.html">CATEGORIES</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link fw-bold" href="daily-dose.html">DAILY DOSE</a>
-            </li>
+            <li class="nav-item"><a class="nav-link fw-bold" href="categories.html">CATEGORIES</a></li>
+            <li class="nav-item"><a class="nav-link fw-bold" href="daily-dose.html">DAILY DOSE</a></li>
             <li class="nav-item">
               <button id="dashboardBtn" type="button" class="btn btn-outline-dark btn-sm ms-lg-2 fw-bold" style="display:none;">
                 <i class="fa fa-user-circle"></i> Dashboard
               </button>
             </li>
-            <!-- Mobile only: About Us, Register, Login, Logout -->
-            <li class="nav-item d-lg-none mt-2">
-              <a href="about.html" class="nav-link fw-bold">About Us</a>
-            </li>
-            <li class="nav-item d-lg-none">
-              <a href="register.html" id="registerLinkMobile" class="nav-link fw-bold">Register</a>
-            </li>
-            <li class="nav-item d-lg-none">
-              <a href="login.html" id="loginLinkMobile" class="nav-link fw-bold">Login</a>
-            </li>
-            <li class="nav-item d-lg-none">
-              <button id="logoutButtonMobile" class="btn btn-outline-dark btn-sm fw-bold w-100 mt-1" style="display:none;">Logout</button>
-            </li>
+            <li class="nav-item d-lg-none mt-2"><a href="about.html" class="nav-link fw-bold">About Us</a></li>
+            <li class="nav-item d-lg-none"><a href="register.html" id="registerLinkMobile" class="nav-link fw-bold">Register</a></li>
+            <li class="nav-item d-lg-none"><a href="login.html" id="loginLinkMobile" class="nav-link fw-bold">Login</a></li>
+            <li class="nav-item d-lg-none"><button id="logoutButtonMobile" class="btn btn-outline-dark btn-sm fw-bold w-100 mt-1" style="display:none;">Logout</button></li>
           </ul>
         </div>
       </div>
     </nav>
   </header>
-  <!-- Header END -->
+  <!-- HEADER END -->
 
-  <!-- Header styles -->
-  <style>
-    .site-header .navbar-brand img {
-      vertical-align: middle;
-    }
-    .site-header .navbar-main .navbar-nav .nav-link {
-      font-weight: bold;
-      letter-spacing: 0.5px;
-    }
-    @media (max-width: 991.98px) {
-      .site-header .navbar-main .navbar-nav {
-        width: 100%;
-      }
-      .site-header .navbar-main .navbar-nav .nav-item {
-        width: 100%;
-      }
-      .site-header .navbar-main .navbar-nav .nav-link,
-      .site-header .navbar-main .navbar-nav .btn {
-        width: 100%;
-        text-align: left;
-        margin-left: 0;
-      }
-    }
-  </style>
-
-  <!-- Firebase Auth logic for header -->
+  <!-- HEADER SCRIPT -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
     import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
@@ -155,42 +112,39 @@
       }
     }
 
-    document.addEventListener('DOMContentLoaded', function() {
-      // Monitor Firebase Auth state
-      onAuthStateChanged(auth, function(user) {
-        updateHeaderUI(user);
-      });
+    onAuthStateChanged(auth, function(user) {
+      updateHeaderUI(user);
 
       // Dashboard button
       const dashboardBtn = document.getElementById('dashboardBtn');
       if (dashboardBtn) {
-        dashboardBtn.addEventListener('click', function() {
+        dashboardBtn.onclick = function() {
           window.location.href = 'dashboard.html';
-        });
+        };
       }
 
       // Logout buttons
       const logoutButton = document.getElementById('logoutButton');
       if (logoutButton) {
-        logoutButton.addEventListener('click', function() {
+        logoutButton.onclick = function() {
           signOut(auth).then(function() {
             window.location.href = 'index.html';
           });
-        });
+        };
       }
       const logoutButtonMobile = document.getElementById('logoutButtonMobile');
       if (logoutButtonMobile) {
-        logoutButtonMobile.addEventListener('click', function() {
+        logoutButtonMobile.onclick = function() {
           signOut(auth).then(function() {
             window.location.href = 'index.html';
           });
-        });
+        };
       }
       // Login/Register links: let them go to their respective pages
     });
   </script>
 
-  <!-- Main Content -->
+  <!-- MAIN CONTENT -->
   <main class="container mt-5" style="text-align: center;">
     <h1>Welcome to IR-LDCE</h1>
     <p>This is the landing page for the LDCE exam preparation portal.</p>
@@ -208,8 +162,6 @@
       <button class="btn btn-outline-primary manual-btn" data-manual="pyq2022" aria-label="Start quiz for 2022 30% Main">10. PYQ 30% Main 2022</button>
     </div>
   </main>
-
-  <!-- Bootstrap JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
